--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
     "nodemailer": "6.4.2",
-    "puppeteer": "2.0.0",
-    "jwt-decode": "2.2.0"
+    "puppeteer": "5.5.0"
   },
   "devDependencies": {
     "nodemon": "2.0.2",
